<resources>
    <string name="app_name">Archidni</string>
    <string name="tramway">Tramway</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="metro">Métro</string>
    <string name="where_to_go">Où allez vous ?</string>
    <string name="lines">Lignes</string>
    <string name="stations">Stations</string>
    <string name="error_retry">Une erreur s\'est produite veuillez réessayer</string>
    <string name="reset">Réinitialiser</string>
    <string name="select_on_map">Emplacement sur la carte</string>
    <string name="click_to_set_on_map">Selectionner un emplacement sur la carte</string>
    <string name="my_position">Ma position</string>
    <string name="click_to_set_gps_location">Selectionner votre emplacement GPS</string>
    <string name="home">Domicile</string>
    <string name="select_home">Ajouter un domicile</string>
    <string name="work">Adresse professionnelle</string>
    <string name="select_work">Ajouter une adresse professionnelle</string>
    <string name="plan_path">Planifier un trajet</string>
    <string name="get_path">Rechercher itinéraire</string>
    <string name="path_origin">Départ :</string>
    <string name="path_destination">Arrivée :</string>
    <string name="options">Options</string>
    <string name="suggested_paths">Itinéraires suggérés</string>
    <string name="where_do_you_come_from">D\'où venez-vous ?</string>
    <string name="not_defined">Non définie</string>
    <string name="minutes">minutes</string>
    <string name="hour">heure</string>
    <string name="hours">heures</string>
    <string name="wait">Attendre</string>
    <string name="walk_to">Marcher pour atteindre</string>
    <string name="metre">mètres</string>
    <string name="today">Aujourd\'hui</string>
    <string name="path">Itinéraire</string>
    <string name="on_map">Emplacement sur la carte.</string>
    <string name="confirm">Confirmer</string>
    <string name="finish">Terminé</string>
    <string name="error_happened">Une erreur s\'est produite veilleuz réessayer</string>
    <string name="cities">Villes</string>
    <string name="favorites">Mes favoris</string>
    <string name="settings">Mes parametres</string>
    <string name="log_out">Se déconnecter</string>
    <string name="station">Station</string>
    <string name="station_of">Station de</string>
    <string name="stops">Arrêts</string>
    <string name="alert_information">Alerte information</string>
    <string name="alert_perturbation">Alerte perturbations</string>
    <string name="check_params_and_internet">Une erreur s\'est produite veuillez vérifier vos paramètres de recherche ainsi que votre connexion internet</string>
    <string name="retry">Réessayer</string>
    <string name="no_paths_found">Aucun itinéraries trouvé pour les paramètres de recherche choisis</string>
    <string name="view_schedules_for">Consulter les horaires pour :</string>
    <string name="nearby">Â proximité</string>
    <string name="transfer_number">Nombre de correspondances</string>
    <string name="default_algorithm">Tri par défaut</string>
    <string name="does_this_path_seem_correct">Cet itinéraire vous semble t\'il correct ?</string>
    <string name="report_sent">Votre feedback a été envoyée merci de votre coopération !</string>
    <string name="no_line_added_to_favorites_add_new_lines_to_be_notified">Aucune ligne ajoutée aux favoris. Veuillez ajouter des lignes à vos favoris pour être notifié des perturbations de trafic.</string>
    <string name="an_error_has_happened_please_verify_your_internet_connection">Une erreur s\'est produite veuillez vérifier votre connexion internet.</string>
    <string name="search_line_station">Rechercher une ligne ou une station</string>
    <string name="hospitals">Hôpitaux</string>
    <string name="password">Mot de passe</string>
    <string name="email">Email</string>
    <string name="update">Actualiser</string>
    <string name="a_proximit_points">Â proximité :</string>
    <string name="my_compte">Mon compte</string>
    <string name="install_new_update">Nous avons préparer une nouvelle version de Archidni. Mettez à jour votre application pour profiter de la meilleure expérience qui soit.</string>
    <string name="an_update_is_required">Une mise à jour est nécessaire</string>
    <string name="beta_version">Version Bêta</string>
</resources>
