<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@drawable/shape_rect_white_rounded__8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_transport_mean_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_transport_mean_0_disabled"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/metro"
            android:textColor="@color/color_transport_mean_not_selected" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/text_transport_mean_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_transport_mean_1_disabled"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/train"
            android:textColor="@color/color_transport_mean_not_selected" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/text_transport_mean_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_transport_mean_2_disabled"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/bus"
            android:textColor="@color/color_transport_mean_not_selected" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/text_transport_mean_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_transport_mean_3_disabled"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/tramway"
            android:textColor="@color/color_transport_mean_not_selected" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_transport_mean_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_transport_mean_4_disabled"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="Téléphérique"
            android:textColor="@color/color_transport_mean_not_selected" />



        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/text_parking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:clickable="true"
            android:drawablePadding="4dp"
            android:drawableTop="@drawable/ic_parking_disabled_24dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="Parkings"
            android:textColor="@color/color_transport_mean_not_selected" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:id="@+id/layout_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="4dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text=""
            android:textColor="@color/color_transport_mean_selected_0" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:background="#E6E6E6" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="@color/color_transport_mean_not_selected" />
    </LinearLayout>
</LinearLayout>

