<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorGreen"
        android:elevation="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/shape_rect_white_rounded"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/path_origin"
                android:textColor="@color/color_transport_mean_selected_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="La grande Poste, Alger"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rect_white_rounded"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/path_destination"
                android:textColor="@color/color_transport_mean_selected_0"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="Taiwan, Alger"
                android:textColor="#000" />
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:checkedButton="@+id/radio_button_departure"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="#FFF"
                        android:text="Départ"
                        android:textColor="#FFF"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radio_button_arrival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:buttonTint="#FFF"
                        android:text="Arrivée"
                        android:textColor="#FFF"
                        android:textSize="14sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_departure_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/ic_time_white_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="Maintenant"
                        android:textColor="#FFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_departure_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/ic_date_white_24dp"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="Aujourd'hui"
                        android:textColor="#FFF"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/text_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="16dp"
                android:background="@drawable/shape_button_empty_white_rect"
                android:gravity="center"
                android:text="@string/options"
                android:textColor="#FFF"
                android:visibility="visible" />
        </android.support.design.widget.CoordinatorLayout>
    </LinearLayout>

</LinearLayout>