<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/layout_transport_means_selector" />

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/shape_rect_white_rounded"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/layout_lines"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:id="@+id/text_lines"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:drawableEnd="@drawable/ic_line_disabled"
                                android:drawablePadding="4dp"
                                android:drawableRight="@drawable/ic_line_disabled"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:padding="6dp"
                                android:text="@string/lines"
                                android:textColor="#000"
                                tools:ignore="UnusedAttribute" />
                        </FrameLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#E6E6E6" />

                        <FrameLayout
                            android:id="@+id/layout_stations"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:id="@+id/text_stations"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:drawableEnd="@drawable/ic_station_enabled"
                                android:drawablePadding="4dp"
                                android:drawableRight="@drawable/ic_station_enabled"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:padding="6dp"
                                android:text="@string/stations"
                                android:textColor="@color/colorGreen"
                                tools:ignore="UnusedAttribute" />
                        </FrameLayout>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="#E6E6E6" />

                        <FrameLayout
                            android:id="@+id/layout_interests"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">

                            <TextView
                                android:id="@+id/text_interests"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:drawablePadding="4dp"
                                android:drawableRight="@drawable/ic_star_disabled_24dp"
                                android:fontFamily="sans-serif-condensed"
                                android:gravity="center"
                                android:padding="6dp"
                                android:text="Intérêts"
                                android:textColor="#000"
                                tools:ignore="UnusedAttribute" />
                        </FrameLayout>

                    </LinearLayout>


                    <TextView
                        android:id="@+id/text_find_lines_stations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@drawable/shape_rect_white_rounded__16dp"
                        android:drawableLeft="@drawable/ic_search_green"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/search_line_station"
                        android:textColor="#000"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_list_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="8dp"
                        android:drawablePadding="8dp"
                        android:text="Stations à proximité du centre de la carte :"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

